@@ -3,30 +3,17 @@ package com.vassbassapp.factory;
 import org.telegram.telegrambots.meta.api.objects.replykeyboard.InlineKeyboardMarkup;
 import org.telegram.telegrambots.meta.api.objects.replykeyboard.buttons.InlineKeyboardButton;
 
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.List;
 
 public class ButtonsFactory {
-    /**
-     * Creates buttons from Map
-     * @param buttons key - button_id, value - button_name(visible)
-     * @return buttons markup
-     */
-    public static InlineKeyboardMarkup createButtons(Map<String, String> buttons) {
+    private ButtonsFactory(){}
+
+    @SafeVarargs
+    public static InlineKeyboardMarkup createButtons(List<InlineKeyboardButton> ... row) {
         InlineKeyboardMarkup markup = new InlineKeyboardMarkup();
-
-        List<List<InlineKeyboardButton>> keyboard = new ArrayList<>();
-
-        for (Map.Entry<String, String> entry : buttons.entrySet()) {
-            String btnId = entry.getKey();
-            String btnName = entry.getValue();
-
-            InlineKeyboardButton btn = new InlineKeyboardButton();
-            btn.setCallbackData(btnId);
-            btn.setText(btnName);
-
-            keyboard.add(List.of(btn));
-        }
-
+        List<List<InlineKeyboardButton>> keyboard = new ArrayList<>(Arrays.asList(row));
         markup.setKeyboard(keyboard);
         return markup;
     }
